// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<More /> should render as expected when the user is logged in 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(More)>
    <More
      isLoggedIn={true}
      logout={[Function]}
      user={
        Object {
          "firstName": "John",
          "lastName": "Appleseed",
        }
      }
    >
      <MockedView
        aria-hidden={false}
      >
        <div>
          <Connect(BackBar)
            right={null}
          />
          <Headline
            style={
              Object {
                "margin": "24px 20px 16px",
              }
            }
            tag="h1"
            text="navigation.welcome_message"
          >
            <h1
              className="css-18cwfw7"
              data-test-id="Headline"
              style={
                Object {
                  "margin": "24px 20px 16px",
                }
              }
            >
              <Translate
                className=""
                params={Object {}}
                role={null}
                string="navigation.welcome_message"
              >
                <span
                  className=""
                  role={null}
                >
                  navigation.welcome_message
                </span>
              </Translate>
            </h1>
          </Headline>
          <Portal
            name="nav-menu.content.before"
            props={
              Object {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <Quicklinks>
            <div />
          </Quicklinks>
          <StoreInfo>
            <Portal
              name="nav-menu.store-information.before"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
            <Portal
              name="nav-menu.store-information"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            >
              <Section
                title="navigation.store_information"
              >
                <Headline
                  style={
                    Object {
                      "margin": "24px 20px 16px",
                    }
                  }
                  tag="h2"
                  text="navigation.store_information"
                >
                  <h2
                    className="css-18cwfw7"
                    data-test-id="Headline"
                    style={
                      Object {
                        "margin": "24px 20px 16px",
                      }
                    }
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      role={null}
                      string="navigation.store_information"
                    >
                      <span
                        className=""
                        role={null}
                      >
                        navigation.store_information
                      </span>
                    </Translate>
                  </h2>
                </Headline>
                <div
                  className={
                    Object {
                      "data-css-13ch7sr": "",
                    }
                  }
                >
                  <Shipping>
                    <Portal
                      name="nav-menu.shipping.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.shipping"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/shipping"
                        label="navigation.shipping"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/shipping"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/shipping"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/shipping"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.shipping"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.shipping
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.shipping.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Shipping>
                  <Payment>
                    <Portal
                      name="nav-menu.payment.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.payment"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/payment"
                        label="navigation.payment"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/payment"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/payment"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/payment"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.payment"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.payment
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.payment.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Payment>
                  <Terms>
                    <Portal
                      name="nav-menu.terms.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.terms"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/terms"
                        label="navigation.terms"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/terms"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/terms"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/terms"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.terms"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.terms
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.terms.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Terms>
                  <Privacy>
                    <Portal
                      name="nav-menu.privacy.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.privacy"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/privacy"
                        label="navigation.privacy"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/privacy"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/privacy"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/privacy"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.privacy"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.privacy
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.privacy.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Privacy>
                  <ReturnPolicy>
                    <Portal
                      name="nav-menu.return-policy.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.return-policy.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </ReturnPolicy>
                  <Imprint>
                    <Portal
                      name="nav-menu.imprint.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.imprint"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/imprint"
                        label="navigation.about"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/imprint"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/imprint"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/imprint"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.about"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.about
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.imprint.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Imprint>
                </div>
              </Section>
            </Portal>
            <Portal
              name="nav-menu.store-information.after"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
          </StoreInfo>
          <UserMenu
            entries={null}
            isLoggedIn={true}
            logout={[Function]}
            user={
              Object {
                "firstName": "John",
                "lastName": "Appleseed",
              }
            }
          >
            <Portal
              name="user-menu.container.before"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": Object {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            />
            <Portal
              name="user-menu.container"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": Object {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            >
              <LoggedIn
                logout={[Function]}
              >
                <Portal
                  name="nav-menu.my-account.before"
                  props={
                    Object {
                      "Item": [Function],
                    }
                  }
                />
                <Portal
                  name="nav-menu.my-account"
                  props={
                    Object {
                      "Item": [Function],
                    }
                  }
                >
                  <div
                    data-test-id="userMenu"
                  >
                    <Section
                      title="navigation.your_account"
                    >
                      <Headline
                        style={
                          Object {
                            "margin": "24px 20px 16px",
                          }
                        }
                        tag="h2"
                        text="navigation.your_account"
                      >
                        <h2
                          className="css-18cwfw7"
                          data-test-id="Headline"
                          style={
                            Object {
                              "margin": "24px 20px 16px",
                            }
                          }
                        >
                          <Translate
                            className=""
                            params={Object {}}
                            role={null}
                            string="navigation.your_account"
                          >
                            <span
                              className=""
                              role={null}
                            >
                              navigation.your_account
                            </span>
                          </Translate>
                        </h2>
                      </Headline>
                      <div
                        className={
                          Object {
                            "data-css-13ch7sr": "",
                          }
                        }
                      >
                        <Portal
                          name="nav-menu.logout.before"
                          props={
                            Object {
                              "Item": [Function],
                            }
                          }
                        />
                        <Portal
                          name="nav-menu.logout"
                          props={
                            Object {
                              "Item": [Function],
                            }
                          }
                        >
                          <MoreMenuItem
                            className={null}
                            href={null}
                            label="navigation.logout"
                            onClick={[Function]}
                            testId="logoutButton"
                          >
                            <button
                              className="css-1hj8a57"
                              data-test-id="logoutButton"
                              onClick={[Function]}
                              type="button"
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.logout"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.logout
                                </span>
                              </Translate>
                            </button>
                          </MoreMenuItem>
                        </Portal>
                        <Portal
                          name="nav-menu.logout.after"
                          props={
                            Object {
                              "Item": [Function],
                            }
                          }
                        />
                      </div>
                    </Section>
                  </div>
                </Portal>
                <Portal
                  name="nav-menu.my-account.after"
                  props={
                    Object {
                      "Item": [Function],
                    }
                  }
                />
              </LoggedIn>
            </Portal>
            <Portal
              name="user-menu.container.after"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": true,
                  "logout": [Function],
                  "user": Object {
                    "firstName": "John",
                    "lastName": "Appleseed",
                  },
                }
              }
            />
          </UserMenu>
          <Portal
            name="nav-menu.content.after"
            props={
              Object {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <ClientInformation>
            <div />
          </ClientInformation>
        </div>
      </MockedView>
    </More>
  </Connect(More)>
</Provider>
`;

exports[`<More /> should render as expected when the user is not logged in 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(More)>
    <More
      isLoggedIn={false}
      logout={[Function]}
      user={null}
    >
      <MockedView
        aria-hidden={false}
      >
        <div>
          <Connect(BackBar)
            right={null}
          />
          <Headline
            style={
              Object {
                "margin": "24px 20px 16px",
              }
            }
            tag="h1"
            text="login.headline"
          >
            <h1
              className="css-18cwfw7"
              data-test-id="Headline"
              style={
                Object {
                  "margin": "24px 20px 16px",
                }
              }
            >
              <Translate
                className=""
                params={Object {}}
                role={null}
                string="login.headline"
              >
                <span
                  className=""
                  role={null}
                >
                  login.headline
                </span>
              </Translate>
            </h1>
          </Headline>
          <UserMenu
            entries={null}
            isLoggedIn={false}
            logout={[Function]}
            user={null}
          >
            <Portal
              name="user-menu.container.before"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            />
            <Portal
              name="user-menu.container"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            >
              <Connect(LoggedOut)>
                <LoggedOut
                  dispatch={[Function]}
                  isDisabled={false}
                >
                  <div
                    data-test-id="userMenu"
                  >
                    <Grid
                      className="css-az18cj"
                      component="ul"
                      wrap={false}
                    >
                      <ul
                        className="css-az18cj css-h7r55a"
                      >
                        <GridItem
                          className="css-mzzsxh"
                          component="li"
                          grow={0}
                          shrink={1}
                        >
                          <li
                            className="css-mzzsxh"
                          >
                            <Connect(Link)
                              disabled={false}
                              href="/login"
                            >
                              <Link
                                aria-label={null}
                                className=""
                                disabled={false}
                                historyPush={[Function]}
                                historyReplace={[Function]}
                                href="/login"
                                replace={false}
                                role="link"
                                state={Object {}}
                                tabIndex={null}
                                tag="div"
                              >
                                <div
                                  aria-label={null}
                                  className="css-c6ki83 "
                                  data-test-id="link: /login"
                                  onClick={[Function]}
                                  role="link"
                                  tabIndex={null}
                                >
                                  <Button
                                    className="css-6f03lb"
                                    disabled={false}
                                    flat={false}
                                    onClick={null}
                                    testId="UserMenuLogin"
                                    type="secondary"
                                    wrapContent={true}
                                  >
                                    <Button
                                      className="css-187rja2 css-6f03lb"
                                      disabled={false}
                                      onClick={null}
                                      testId="UserMenuLogin"
                                    >
                                      <button
                                        className="css-187rja2 css-6f03lb css-1rn65c0"
                                        data-test-id="UserMenuLogin"
                                        disabled={false}
                                        onClick={null}
                                      >
                                        <div
                                          className="css-1fscwua"
                                        >
                                          <Translate
                                            className=""
                                            params={Object {}}
                                            role={null}
                                            string="login.button"
                                          >
                                            <span
                                              className=""
                                              role={null}
                                            >
                                              login.button
                                            </span>
                                          </Translate>
                                        </div>
                                      </button>
                                    </Button>
                                  </Button>
                                </div>
                              </Link>
                            </Connect(Link)>
                          </li>
                        </GridItem>
                        <GridItem
                          className="css-mzzsxh"
                          component="li"
                          grow={0}
                          shrink={1}
                        >
                          <li
                            className="css-mzzsxh"
                          >
                            <Connect(Link)
                              disabled={false}
                              href="/register"
                            >
                              <Link
                                aria-label={null}
                                className=""
                                disabled={false}
                                historyPush={[Function]}
                                historyReplace={[Function]}
                                href="/register"
                                replace={false}
                                role="link"
                                state={Object {}}
                                tabIndex={null}
                                tag="div"
                              >
                                <div
                                  aria-label={null}
                                  className="css-c6ki83 "
                                  data-test-id="link: /register"
                                  onClick={[Function]}
                                  role="link"
                                  tabIndex={null}
                                >
                                  <Button
                                    className="css-6f03lb"
                                    disabled={false}
                                    flat={false}
                                    onClick={null}
                                    testId="UserMenuRegister"
                                    type="secondary"
                                    wrapContent={true}
                                  >
                                    <Button
                                      className="css-187rja2 css-6f03lb"
                                      disabled={false}
                                      onClick={null}
                                      testId="UserMenuRegister"
                                    >
                                      <button
                                        className="css-187rja2 css-6f03lb css-1rn65c0"
                                        data-test-id="UserMenuRegister"
                                        disabled={false}
                                        onClick={null}
                                      >
                                        <div
                                          className="css-1fscwua"
                                        >
                                          <Translate
                                            className=""
                                            params={Object {}}
                                            role={null}
                                            string="login.signup"
                                          >
                                            <span
                                              className=""
                                              role={null}
                                            >
                                              login.signup
                                            </span>
                                          </Translate>
                                        </div>
                                      </button>
                                    </Button>
                                  </Button>
                                </div>
                              </Link>
                            </Connect(Link)>
                          </li>
                        </GridItem>
                      </ul>
                    </Grid>
                  </div>
                </LoggedOut>
              </Connect(LoggedOut)>
            </Portal>
            <Portal
              name="user-menu.container.after"
              props={
                Object {
                  "entries": null,
                  "handleLogout": [Function],
                  "isLoggedIn": false,
                  "logout": [Function],
                  "user": null,
                }
              }
            />
          </UserMenu>
          <Portal
            name="nav-menu.content.before"
            props={
              Object {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <Quicklinks>
            <div />
          </Quicklinks>
          <StoreInfo>
            <Portal
              name="nav-menu.store-information.before"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
            <Portal
              name="nav-menu.store-information"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            >
              <Section
                title="navigation.store_information"
              >
                <Headline
                  style={
                    Object {
                      "margin": "24px 20px 16px",
                    }
                  }
                  tag="h2"
                  text="navigation.store_information"
                >
                  <h2
                    className="css-18cwfw7"
                    data-test-id="Headline"
                    style={
                      Object {
                        "margin": "24px 20px 16px",
                      }
                    }
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      role={null}
                      string="navigation.store_information"
                    >
                      <span
                        className=""
                        role={null}
                      >
                        navigation.store_information
                      </span>
                    </Translate>
                  </h2>
                </Headline>
                <div
                  className={
                    Object {
                      "data-css-13ch7sr": "",
                    }
                  }
                >
                  <Shipping>
                    <Portal
                      name="nav-menu.shipping.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.shipping"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/shipping"
                        label="navigation.shipping"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/shipping"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/shipping"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/shipping"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.shipping"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.shipping
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.shipping.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Shipping>
                  <Payment>
                    <Portal
                      name="nav-menu.payment.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.payment"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/payment"
                        label="navigation.payment"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/payment"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/payment"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/payment"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.payment"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.payment
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.payment.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Payment>
                  <Terms>
                    <Portal
                      name="nav-menu.terms.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.terms"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/terms"
                        label="navigation.terms"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/terms"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/terms"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/terms"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.terms"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.terms
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.terms.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Terms>
                  <Privacy>
                    <Portal
                      name="nav-menu.privacy.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.privacy"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/privacy"
                        label="navigation.privacy"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/privacy"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/privacy"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/privacy"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.privacy"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.privacy
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.privacy.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Privacy>
                  <ReturnPolicy>
                    <Portal
                      name="nav-menu.return-policy.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.return-policy.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </ReturnPolicy>
                  <Imprint>
                    <Portal
                      name="nav-menu.imprint.before"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                    <Portal
                      name="nav-menu.imprint"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    >
                      <MoreMenuItem
                        className={null}
                        href="/page/imprint"
                        label="navigation.about"
                        onClick={null}
                        testId={null}
                      >
                        <Connect(Link)
                          className="css-1hj8a57"
                          href="/page/imprint"
                        >
                          <Link
                            aria-label={null}
                            className="css-1hj8a57"
                            disabled={false}
                            historyPush={[Function]}
                            historyReplace={[Function]}
                            href="/page/imprint"
                            replace={false}
                            role="link"
                            state={Object {}}
                            tabIndex={null}
                            tag="div"
                          >
                            <div
                              aria-label={null}
                              className="css-c6ki83 css-1hj8a57"
                              data-test-id="link: /page/imprint"
                              onClick={[Function]}
                              role="link"
                              tabIndex={null}
                            >
                              <Translate
                                className=""
                                params={Object {}}
                                role={null}
                                string="navigation.about"
                              >
                                <span
                                  className=""
                                  role={null}
                                >
                                  navigation.about
                                </span>
                              </Translate>
                            </div>
                          </Link>
                        </Connect(Link)>
                      </MoreMenuItem>
                    </Portal>
                    <Portal
                      name="nav-menu.imprint.after"
                      props={
                        Object {
                          "Headline": [Function],
                          "Item": [Function],
                          "Section": [Function],
                        }
                      }
                    />
                  </Imprint>
                </div>
              </Section>
            </Portal>
            <Portal
              name="nav-menu.store-information.after"
              props={
                Object {
                  "Headline": [Function],
                  "Item": [Function],
                  "Section": [Function],
                }
              }
            />
          </StoreInfo>
          <Portal
            name="nav-menu.content.after"
            props={
              Object {
                "Headline": [Function],
                "Item": [Function],
                "Section": [Function],
              }
            }
          />
          <ClientInformation>
            <div />
          </ClientInformation>
        </div>
      </MockedView>
    </More>
  </Connect(More)>
</Provider>
`;
